--- a/style.css
+++ b/style.css
@@ -61,8 +61,16 @@ h1 {
   gap: 24px;
 }
 
+.category {
+  margin-bottom: 16px;
+}
+
 .vote-buttons {
   margin-left: auto;
+}
+
+.btn:hover {
+  transform: scale(110%) rotate(-2deg);
 }
 
 .fact-form {
@@ -81,6 +89,46 @@ h1 {
   padding-right: 10px;
 }
 
+.source:link,
+.source:visited {
+  color: #a8a29e;
+  text-decoration: none;
+  margin-left: 12px;
+  transition: 0.3s;
+}
+
+.source:hover,
+.source:active {
+  color: blue;
+}
+
 ul {
   list-style: none;
+}
+
+.btn {
+  border: none;
+  font-family: "Coiny", sans-serif;
+  line-height: 1;
+  text-transform: uppercase;
+  font-size: 17px;
+  padding: 16px 0 13px;
+  background-image: linear-gradient(135deg, #3b82f6, #ef4444, #16a34a, #eab308);
+  color: inherit;
+  transition: 0.3s;
+}
+
+.btn-large {
+  font-size: 20px;
+  padding: 20px 32px 17px;
+}
+
+.btn-all-categories {
+  margin-bottom: 16px;
+  width: 100%;
+}
+
+.btn-category {
+  width: 100%;
+  background-image: none;
 }
